--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-    margin: 150px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .constainer {
     display: flex;
     flex-wrap: flex;
-    width: 100px;
 }
 
 button {
